heirarchy alignment issue

--- a/src/styles/components/_hierarchy.scss
+++ b/src/styles/components/_hierarchy.scss
@@ -106,7 +106,7 @@
 
     .button.accordion-toggle, .collection-bar-spacer {
       display: inline-block;
-      min-width: 100px;
+      min-width: 115px;
 
       @include mobile {
         padding: rem(10px) rem(10px) rem(5px);
